--- a/personal.html
+++ b/personal.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prosnal</title>
-</head>
-<body>
-    <table>
-        <tr>
-            <td><b>Profile photo &nbsp;&nbsp;&nbsp; :</b></td> 
-            <td><img src="developer.png" width="100px" alt="profile image"></td>
-        </tr>
-        <tr>
-            <td><b>Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; :</b></td>
-            <td>Sushant Sambhaji Jadhav</td>
-        </tr>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Prosnal</title>
+    </head>
+    <body>
+        <table>
+            <tr>
+                <td>
+                    <b>Profile photo &nbsp;&nbsp;&nbsp; :</b>
+                </td>
+                <td><img src="developer.png" width="100px" alt="profile image"/></td>
+            </tr>
+            <tr>
+                <td>
+                    <b >Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        :</b >
+                </td>
+                <td>Sushant Sambhaji Jadhav</td>
+            </tr>
 
-        <tr>
-            <td><b>Mobile Number :</b></td>
-            <td><u>+919096046516</u></td>
-        </tr>
-        <tr>
-            <td><b>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; :</b></td>
-            <td>sushantjadhav2015@gmail.com</td>
-        </tr>
-        <tr>
-            <td><b>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b></td>
-            <td>July-29-1995</td>
-        </tr>
-        <tr>
-            <td><b>Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; :</b></td>
-            <td>A/p: Girgaon, Tal.: Karvir, Dist.: Kolhapur, 416 013</td>
-        </tr>
-    </table>
-    <details>
-        <summary><b>Family Details</b></summary>
-        <ul>
-            <li>Father Name : Sambhaji Jadhav </li>
-            <li>Mother Name : Sunita Jadhav</li>
-        </ul>
-    </details>
-
-    
-</body>
+            <tr>
+                <td>
+                    <b>Mobile Number :</b>
+                </td>
+                <td>
+                    <u>+919096046516</u>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b >Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b >
+                </td>
+                <td>sushantjadhav2015@gmail.com</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Date of birth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                </td>
+                <td>July-29-1995</td>
+            </tr>
+            <tr>
+                <td>
+                    <b >Address&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        :</b >
+                </td>
+                <td>A/p: Girgaon, Tal.: Karvir, Dist.: Kolhapur, 416 013</td>
+            </tr>
+        </table>
+        <details>
+            <summary>
+                <b>Family Details</b>
+            </summary>
+            <ul>
+                <li>Father Name : Sambhaji Jadhav</li>
+                <li>Mother Name : Sunita Jadhav</li>
+            </ul>
+        </details>
+    </body>
 </html>
