home and index page code
home and index page code

--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Index</title>
-        <link rel="icons" name="x-icon/image" href="developer.png">
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <link rel="icons" name="x-icon/image" href="developer.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+</head>
+  
+<body>
+    <!-- using fontawesome -->
+    <header>
+      <i class="fa fa-user" aria-hidden="true"> Mohit Sharma</i
+      >&nbsp;&nbsp;&nbsp;
+      <i class="fa fa-phone-square" aria-hidden="true"> 8007972805</i
+      >&nbsp;&nbsp;&nbsp;
+      <i class="fa fa-envelope" aria-hidden="true"> mohit.sharma@gmail.com</i
+      >
+    </header><br>
 
-    </head>
+<!-- navigation of semantic tag  -->
+    <div>
+        <a href="home.html" target="frame 1">Home</a>&nbsp;&nbsp;
+        <a href="techStack.html" target="frame 1">Technology Stack</a>
+    </div>
 
-    <body>
-        <!-- using fontawesome -->
-        <i class="fa fa-user" aria-hidden="true">
-            Mohit Sharma</i>&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-phone-square" aria-hidden="true">
-            8007972805</i>&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-envelope" aria-hidden="true">
-            mohit.sharma@gmail.com</i><br>
-        <!-- iframe tag used -->
-        <iframe width="900px" height="500px"></iframe><br>
+    <!-- iframe tag used -->
+    <iframe width="900px" height="500px" name="frame 1" src="home.html"></iframe><br>
 
-        <!-- social media icons with its link -->
-        <label>Follow me</label>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.linkedin.com" target="_blank">
-            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-        </a>&nbsp;&nbsp;&nbsp;
+    <!-- social media icons with its link -->
+    <footer>
+      <label>Follow me</label>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.linkedin.com" target="_blank"
+        ><i class="fa fa-linkedin-square" aria-hidden="true"></i></a
+      >&nbsp;&nbsp;&nbsp;
 
-        <a href="https://www.google.com" target="_blank">
-            <i class="fa fa-google" aria-hidden="true"></i>
-        </a>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.google.com" target="_blank"
+        ><i class="fa fa-google" aria-hidden="true"></i></a
+      >&nbsp;&nbsp;&nbsp;
 
-        <a href="https://www.instagram.com" target="_blank">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.instagram.com" target="_blank"
+        ><i class="fa fa-instagram" aria-hidden="true"></i></a
+      >&nbsp;&nbsp;&nbsp;
 
-        <a href="https://www.facebook.com" target="_blank">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-        </a>&nbsp;&nbsp;&nbsp;
-        
-    </body>
+      <a href="https://www.facebook.com" target="_blank"
+        ><i class="fa fa-facebook-official" aria-hidden="true"></i></a
+      >&nbsp;&nbsp;&nbsp;
+    </footer>
+  </body>
 </html>
