--- a/techStack.html
+++ b/techStack.html
@@ -14,6 +14,7 @@
             text-align: center;
             border: 1px solid #000;
             border-collapse: collapse;
+            padding: 10px;
 
         }
     </style>
