contact us added
contact us added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 </head>
 
+<style>
+  li {
+    float: left;
+  }
+
+  .hme {
+    background-color: #4CB96B
+  }
+</style>
+
 <body>
   <!-- using fontawesome -->
   <header>
@@ -21,11 +31,12 @@
 
   <!-- navigation of semantic tag  -->
   <div>
-    <a href="home.html" target="frame 1">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="hme" href="home.html" target="frame 1">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="techStack.html" target="frame 1">Technology Stack</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="education.html" target="frame 1">Education</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="hme" href="education.html" target="frame 1">Education</a>&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="hobbies.html" target="frame 1">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="personal.html" target="frame 1">Personal</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="hme" href="personal.html" target="frame 1">Personal</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="contactUs.html" target="frame 1">Contact Us</a>
 
   </div>
 
@@ -49,4 +60,4 @@
   </footer>
 </body>
 
-</html>
+</html
