--- a/home.html
+++ b/home.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional summery</title>
+    <style>
+        .career {
+            background-color: aquamarine;
+            color: brown;
+        }
+
+        .professional {
+            background-color: aquamarine;
+            color: brown;
+        }
+
+        span {
+            color: blueviolet;
+            font-size: medium;
+        }
+    </style>
 </head>
+
 <body>
-    <h2>Professional summery</h2>
+    <h2 class="career">Career Objective</h2>
+    TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH
+
+    <h2 class="professional">Professional summery</h2>
     <ul>
-        <li>Having 1 year of experieance in developing Single page Web Page application using Angular 8,HTML.5, Bootstrap 5, JavaScript, TypeScript </li>
+        <li>Having 1 year of experieance in developing Single page Web Page application using <span>Angular
+                8</span>,HTML.5, Bootstrap 5, JavaScript, TypeScript </li>
         <li>Experieance on working with version control system - GIT and GitHub</li>
         <li>Experieance working with JIRA for user stories and bug tacking</li>
         <li>Strong Debugging & Troubleshooting code experieance using Chrome Developer tool</li>
@@ -19,6 +41,7 @@
         <li>Knowledge of NodeJS</li>
         <li>Ability to work with pepole at all levels in the program</li>
     </ul>
-    
+
 </body>
+
 </html>
