--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
 </head>
 
 <style>
-  li {
-    float: left;
-  }
-
-  .hme {
-    background-color: #4CB96B
+  header {
+    background-color: rgb(245, 197, 221);
   }
 </style>
 
 <body>
   <!-- using fontawesome -->
   <header>
-    <i class="fa fa-user" aria-hidden="true"> Mohit Sharma</i>&nbsp;&nbsp;&nbsp;
-    <i class="fa fa-phone-square" aria-hidden="true"> 8007972805</i>&nbsp;&nbsp;&nbsp;
-    <i class="fa fa-envelope" aria-hidden="true"> mohit.sharma@gmail.com</i>
+    <i class="fa fa-user" aria-hidden="true" style="color: blueviolet;"></i> Sushant Jadhav&nbsp;&nbsp;&nbsp;
+    <i class="fa fa-phone-square" aria-hidden="true" style="color: green"></i> 9096046516&nbsp;&nbsp;&nbsp;
+    <i class="fa fa-envelope" aria-hidden="true" style="color:red"></i> sushantjadhav2015@gmail.com
   </header>
   <br />
 
