--- a/cssLearning.html
+++ b/cssLearning.html
@@ -1,26 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS learning</title>
+  <title>CSS Learning</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Josefin Sans", sans-serif;
+    }
+
+    h3 {
+      /* border-style: solid;
+        border-width: 10px;
+        border-color: black; */
+      border: solid 5px black;
+
+      /* padding-top: 30px;
+        padding-bottom: 60px;
+        padding-left: 20px;
+        padding-right: 40px; */
+
+      padding: 30px 40px 60px 50px;
+
+      /* margin-top: 50px;
+        margin-left: 50px;
+        margin-bottom: 50px;
+        margin-right: 50px; */
+
+      margin: 50px 25px;
+    }
+
+    h3:hover {
+      color: red;
+    }
+
+    h2 {
+      /* border-style: solid;
+        border-width: 10px;
+        border-color: black; */
+      /* border-left: dotted 10px black; */
+      border-bottom: solid 5px red;
+    }
+  </style>
 </head>
 
 <body>
-    <h2 style="color: green;"> <u> <i> Career <span style="color: darkred;">Objectives</span> </i> </u> </h2>
-    <hr>
-    <p>
-        <strong style="color: blue;"> Seeking </strong> a <b style="color: chartreuse;"> challenging</b> and
-        <u>rewarding career </u>
-        in a reputed organization where my <mark style="font-size: larger;"> technical skills </mark>
-        would make &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br> and <small>guide me </small> in
-        building a rewarding
-        career at the same time enhancing my <span style="font-size: larger;">knowledge</span> of <i style="color: darkturquoise; font-size: larger;"> industry
-            wide processes.
-        </i>
-    </p>
+  <h2 style="color: darkgreen">
+    Career <span style="color: darkgreen"> Objectives </span>
+  </h2>
+  <hr />
+  <p>
+    <strong style="color: darkgreen"> Seeking </strong> a
+    <b> challenging</b> and <u> rewarding career </u> in a reputed
+    organization where my
+    <mark style="font-size: x-large"> technical skills </mark> would make
+    &nbsp; &nbsp; &nbsp; a positive contribution to the organization <br />
+    and <small>guide me </small> in building a rewarding career at the same
+    time enhancing my
+    <span style="font-size: larger; color: darkgreen">knowledge </span> of
+    <i style="color: darksalmon; font-size: larger">
+      industry wide processes.
+    </i>
+  </p>
+
+  <h3>This is heading 3</h3>
+
+  <h2> This is heading 2 </h2>
 
 </body>
 
