--- a/hobbies.html
+++ b/hobbies.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hobbies</title>
-  </head>
-  <body>
-    <details>
-      <summary><strong>My Hobbies are as follows</strong></summary>
-      <ol>
-        <li>To learn new things</li>
-        <li>Skecthing</li>
-        <li>Bike riding</li>
-      </ol>
-    </details>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hobbies</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+
+
+</head>
+
+<style>
+  * {
+
+    font-family: "Josefin Sans", sans-serif;
+
+  }
+
+  ol li {
+    margin: 0px 20px 10px 0px;
+    /* border: solid 1px black; */
+    background-color: rgb(197, 243, 167);
+    list-style-type: upper-roman;
+  }
+
+  #myHobbies {
+    border: solid rgb(230, 82, 82);
+    width: 100px;
+    height: 30px;
+    border-radius: 7px 2px;
+    color: aqua;
+    background-color: rgb(224, 94, 94);
+  }
+</style>
+
+<body>
+  <details>
+    <summary><strong id="myHobbies">My Hobbies are as follows</strong></summary>
+    <ol>
+      <li>To learn new things</li>
+      <li>Skecthing</li>
+      <li>Bike riding</li>
+    </ol>
+  </details>
+</body>
+
 </html>
