--- a/personal.html
+++ b/personal.html
@@ -5,16 +5,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- use google font, search google font family after that select best font after tahat check right hand side and copy that link and paste in head section after that copy the CSS font and paste in css area -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+
+
+
     <title>Prosnal</title>
 </head>
 
 <style>
+    * {
+        font-family: "Josefin Sans", sans-serif;
+    }
+
     .name,
     summary,
     #profile {
         font-weight: bolder;
         color: rgb(68, 117, 119);
         text-transform: uppercase;
+
+
     }
 
     body {
@@ -23,6 +36,10 @@
 
     td {
         padding: 2px;
+    }
+
+    span {
+        background-color: red;
     }
 </style>
 
@@ -53,6 +70,7 @@
                 Email
             </td>
             <td>: sushantjadhav2015@gmail.com</td>
+
         </tr>
         <tr>
             <td class="name">
