--- a/techStack.html
+++ b/techStack.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech Stack</title>
-    </head>
 
-    <style>
-        table,
-        td,
-        th {
-            text-align: center;
-            border: 1px solid #000;
-            border-collapse: collapse;
-            padding: 10px;
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tech Stack</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 
-        }
-    </style>
+</head>
 
-    <body>
-        <h2>Technology Stack for Angular Web Development</h2>
-        <table>
-            <tbody>
-                <tr>
-                    <td rowspan="5"><b>Technology</b></td>
-                </tr>
-                <tr>
-                    <td>HTML.5 + CSS</td>
-                </tr>
-                <tr>
-                    <td>JavaScript</td>
-                </tr>
-                <tr>
-                    <td>TypeScript</td>
-                </tr>
-                <tr>
-                    <td>Angular</td>
-                </tr>
+<style>
+    * {
+        font-family: "Josefin Sans", sans-serif;
+    }
 
-                <tr>
-                    <td rowspan="3"><b>Tools</b></td>
-                </tr>
-                <tr>
-                    <td>GIT + GitHub</td>
-                </tr>
-                <tr>
-                    <td>Agile + JIRA</td>
-                </tr>
-            </tbody>
-        </table>
+    table,
+    td,
+    th {
+        text-align: center;
+        border: 1px solid #000;
+        border-collapse: collapse;
+        padding: 10px;
 
-    </body>
+    }
+</style>
+
+<body>
+    <h2>Technology Stack for Angular Web Development</h2>
+    <table>
+        <tbody>
+            <tr>
+                <td rowspan="5"><b>Technology</b></td>
+            </tr>
+            <tr>
+                <td>HTML.5 + CSS</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+            </tr>
+            <tr>
+                <td>TypeScript</td>
+            </tr>
+            <tr>
+                <td>Angular</td>
+            </tr>
+
+            <tr>
+                <td rowspan="3"><b>Tools</b></td>
+            </tr>
+            <tr>
+                <td>GIT + GitHub</td>
+            </tr>
+            <tr>
+                <td>Agile + JIRA</td>
+            </tr>
+        </tbody>
+    </table>
+
+</body>
+
 </html>
