--- a/education.html
+++ b/education.html
@@ -6,8 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Education</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+
+
 </head>
 <style>
+  * {
+    font-family: "Josefin Sans", sans-serif;
+  }
+
   table,
   td,
   th {
@@ -17,6 +26,10 @@
 
   th {
     text-align: center;
+  }
+
+  table {
+    margin-right: 80px;
   }
 
   td,
