--- a/home.html
+++ b/home.html
@@ -31,10 +31,10 @@
         ul li {
             padding-bottom: 20px;
             list-style-type: square rgb(180, 36, 36);
-            list-style-type: upper-roman;
+            /* list-style-type: upper-roman; */
         }
 
-        /* this pesudo elemet is used to apply css on li symbles or text  */
+        /* this pesudo  elemet is used to apply css on li symbles or text  */
         li::marker {
             color: red;
         }
